assets/style.scss
@import "~vue2-animate/src/sass/vue2-animate.scss";
@import "carousel.scss";

a {
  color: white;

  &:hover {
    text-decoration: none;
    color: #e7007e;
  }
}

.link a {
  color: #555555;
  text-decoration: underline;

  &:hover {
    color: #e7007e;
  }
}

.menuMarginFixed {
  margin-top: 85px;
}

/* Style the links inside the navigation bar */

.topnav a {
  float: left;
  display: block;

  /*color: #f2f2f2;*/
  text-align: left;
  padding: 14px 16px;
  text-decoration: none;
  border-top: 5px solid transparent;

  &:hover {
    border-top: 5px solid #e7007e;
  }

  &.voce_menu_active {
    border-top: 5px solid #e7007e;
    color: #e7007e;
  }
}

.barretta {
  background-color: #e7007e;
  width: 160px;
  height: 3px;
  margin: 0 auto;
  margin-bottom: 90px;
}

/*MENU DROPDOWN*/

.dropdown-item:hover {
  background-color: #e7007e;
  color: white;
}

.dropdown-menu {
  text-align: left;
  border-top: 0px;
  border-left: 0px;
  border-right: 0px;
  border-bottom: 5px solid #e7007e;
}

.container {
  max-width: 1000px;
}

.containerSlider {
  max-width: 1300px;
  margin: 0 auto;
  text-align: center;
}

.pt-paragrafo {
  padding-top: 32px !important;
}

.pb-paragrafo {
  padding-bottom: 51.2px !important;
}

.pt-title1 {
  padding-top: 96px !important;
}

.pt-title2 {
  padding-top: 144px !important;
}

.pt-sfida {
  padding-top: 40px !important;
}

.pb-sfida {
  padding-bottom: 175px !important;
}

.pt-immagini {
  padding-top: 80px !important;
}

.pt-mission {
  padding-top: 18px !important;
}

.pb-bottom {
  padding-bottom: 80px !important;
}

.pt-bottom {
  padding-top: 80px !important;
}

.pb-shape {
  padding-bottom: 120px !important;
}

.pb-pentaho {
  padding-bottom: 40px !important;
}

.pb-finale {
  padding-bottom: 160px;
}

.pt-contatti {
  padding-top: 50px;
}

.pb-contatti {
  padding-bottom: 50px;
}

.esc_1, .esc_2 {
  padding-left: 90px;
}

.missionSfida {
  letter-spacing: 0.02em;
  font-size: 27px;
  line-height: 1.2;
}

.business_images {
  display: flex;
  align-items: center;
  text-align: center;
  justify-content: center;

  .metabase {
    width: 85px;
  }

  .powerbi {
    width: 184px;
  }
}

.container_business {
  width: 500px;
}

.container_business_case_history {
  width: 100%;
  max-width: 100%;
  margin: 3% auto 0 auto;
  text-align: center;
}

/*slide servizi*/

.businessUno {
  height: 400px;
}

.slideBusiness {
  .textUno {
    padding-top: 10px;
    margin: 0 auto;
    text-align: center;
    font-size: 38px;
  }

  padding-top: 10px;
  width: 100%;
  margin: 0 auto;
  text-align: center;

  img {
    width: 450px;
  }
}

.slideBusinessIG {
  padding-top: 10px;
  width: 100%;
  margin: 0 auto;
  text-align: center;

  img {
    width: 385px;
  }

  .textUno {
    padding-top: 26px;
    margin: 0 auto;
    text-align: center;
    font-size: 38px;
  }
}

.slideBusinessWA {
  padding-top: 10px;
  width: 100%;
  margin: 0 auto;
  text-align: center;

  img {
    width: 460px;
  }

  .textUno {
    padding-top: 47px;
    margin: 0 auto;
    text-align: center;
    font-size: 38px;
  }
}

/* Colori*/

.fontPinkText {
  color: #e7007e;
}

.fontWhitetext {
  color: white;
}

.backgroundPink {
  background-color: #e7007e;
}

.backgroundYellow {
  background-color: #ffcd00;
}

.backgroundBlueLight {
  background-color: #6cc7eb;
}

.backgroundGrayLight {
  background-color: #f0f0f0;
}

.backgroundGreenLight {
  background-color: #9bcec4;
}

.backgroundSchermataUno {
  background-color: #A5CFC7;
}

.backgroundSchermataDue {
  background-color: #C2D521;
}

.backgroundSchermataTre {
  background-color: #FFCD18;
}

.backgroundSchermataQuattro {
  background-color: #F7AD4A;
}

.backgroundSchermataCinque {
  background-color: #28C8EA;
}

.esColor {
  color: #818b96;
}

.fontGrayText {
  color: #555555;
}

.fontLatoBlack {
  font-family: 'Lato Black', sans-serif;
  font-weight: bold;
}

.fontLatoBlackBolder {
  font-family: 'Lato Black', sans-serif;
  font-weight: bolder;
}

.fontLatoRegular {
  font-family: 'Lato Regular', sans-serif;
}

.fontLineHeightSmall {
  line-height: 23px;
}

.fontContatti {
  font-size: 16px;
  line-height: 24px;
}

.fontSizeTitle {
  font-size: 33px;
  line-height: 1.2;
}

.fontSizeText {
  font-size: 18px;
}

.testi {
  font-size: 14px;
  line-height: 1.2;
}

.mr-8 {
  margin-right: 96px !important;
}

/* MENU */

.navbar {
  background-color: white;
}

.nav-item {
  margin-left: 40px;
  padding-bottom: 17px;
}

.navbar .voce_menu {
  color: black;
  font-weight: bold;
  font-size: 14px;

  &:hover {
    color: #e7007e;
  }
}

.navbar .voce_sottomenu {
  color: black;
  font-weight: bold;
  font-size: 12px;

  &:hover {
    color: #e7007e;
  }
}

.navbar-brand img {
  margin-left: 120px;
}

.servizi img {
  width: 350px;
}

/*immagine finale pagine servizi da sistemare*/

.immagini img {
  width: 200px;
  text-decoration: none;
}

.container2 {
  max-width: 700px;
}

.footer_icone {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.esc_img img {
  width: 150px;
  padding-left: 50px;
}

.footer_icone {
  .sfondoCerchio {
    border-radius: 100%;
    background-color: #818b96;
    width: 52px;
    height: 52px;
    color: black;
    text-align: center;
    margin: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  a {
    text-decoration: none;
  }
}

.fa-2x {
  font-size: 1.5em;
}

/*BOTTONE TORNA SU*/

.scrollToTop {
  width: 50px;
  height: 50px;
  text-align: center;
  text-decoration: none;
  position: fixed;
  bottom: 50px;
  right: 20px;
  background: url('/img/index/arrow_up.png');
  opacity: 0.75;

  &:hover {
    text-decoration: none;
  }
}

/** maps */

.map-responsive {
  overflow: hidden;
  min-height: 600px;
  position: relative;
  height: 0;

  iframe {
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    position: absolute;
    border: none;
  }
}

.container-fluid {
  position: relative;
  top: 100%;
}
/* ... */

